--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ before_script:
 job_lint_app_phpdefaultversion: &definition_lint_app_phpdefaultversion
   stage: lint
   script:
-    - composer require --dev friendsofphp/php-cs-fixer:^2.0 jakub-onderka/php-parallel-lint:^1.0
+    - composer require --dev friendsofphp/php-cs-fixer:^2.0 php-parallel-lint/php-parallel-lint:^1.0
     - vendor/bin/php-cs-fixer -vvv fix . --dry-run --diff --using-cache=no --rules=@PSR2
     - vendor/bin/parallel-lint --exclude vendor .
 
@@ -29,3 +29,8 @@ job_lint_app_phpnextversion:
   <<: *definition_lint_app_phpdefaultversion
   image: chialab/php:7.3-apache
   allow_failure: true
+
+job_test_app:
+  stage: test
+  script:
+    - composer test
