--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,13 @@
     "type": "library",
     "autoload": {
         "psr-4": {"Pixelbrackets\\Html5MiniTemplate\\": "src/"}
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.0"
+    },
+    "scripts": {
+        "test": [
+            "phpunit tests/unit/"
+        ]
     }
 }
